# OOO_Custom_Coin_Flasher

./: .gitignore  README.md
Software/: CMakeLists.txt  core1.cpp  core1.h  define.h  main.cpp
Software/rfid_rc522/: rc522.c  rc522.h
